log
Thu 16 May 2024 04:55:39 PM UTC: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
test.c:245:5: error: redefinition of ‘main’
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
sudoku.c:68:5: note: previous definition of ‘main’ with type ‘int(int,  char **)’
   68 | int main( int argc, char *argv[] ){
      |     ^~~~
Compilation failed
df728c4
Thu 16 May 2024 04:56:00 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
01890fb
Thu 16 May 2024 05:04:05 PM UTC: 
 sudoku.c | 33 +++++++++++++++++++--------------
 1 file changed, 19 insertions(+), 14 deletions(-)
 tests:  2|4
total_score: 15/70
038de5f
Thu 16 May 2024 05:08:58 PM UTC: 
 sudoku.c | 39 ++++++++++++++++++++++++++++++++++++++-
 1 file changed, 38 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
3fc4d0e
Thu 16 May 2024 05:11:43 PM UTC: 
 sudoku.c | 34 ++++++++--------------------------
 1 file changed, 8 insertions(+), 26 deletions(-)
test.c: In function ‘is_valid’:
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
In file included from test.c:5:
sudoku.c:46:13: error: unused variable ‘k’ [-Werror=unused-variable]
   46 |   int i, j, k;
      |             ^
test.c:263: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
2b9b356
Thu 16 May 2024 05:12:12 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:46:13: error: unused variable ‘k’ [-Werror=unused-variable]
   46 |   int i, j, k;
      |             ^
sudoku.c:65:1: error: control reaches end of non-void function [-Werror=return-type]
   65 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
76f580f
Thu 16 May 2024 05:13:03 PM UTC: 
 sudoku.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  6|2
total_score: 45/70
c8d1aa4
Thu 16 May 2024 05:14:46 PM UTC: 
 sudoku.c | 18 ++++++++++++++----
 1 file changed, 14 insertions(+), 4 deletions(-)
 tests:  6|2
total_score: 45/70
eb8ab57
Thu 16 May 2024 05:15:11 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
cb1eee1
Thu 16 May 2024 05:18:39 PM UTC: 
 sudoku.c | 20 +++++++++++++++++++-
 1 file changed, 19 insertions(+), 1 deletion(-)
 tests:  10|0
total_score: 70/70
c669e7b
Thu 16 May 2024 05:20:47 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
test.c:245:5: error: redefinition of ‘main’
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
sudoku.c:137:5: note: previous definition of ‘main’ with type ‘int(int,  char **)’
  137 | int main( int argc, char *argv[] ){
      |     ^~~~
Compilation failed
e48d0de
Thu 16 May 2024 05:25:54 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  10|0
total_score: 70/70
0966ae3
Thu 16 May 2024 05:28:16 PM UTC: 
 sudoku.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
 tests:  10|0
total_score: 70/70
50f96cf
